# plover_ahowo_stenotype

./: ahowo_theory.json  me.json  plover_ahowo_stenotype.py  setup.cfg  top_1000_english_words.json
