[metadata]
name = ahowo_stenotype
version = 0.0.1
description = Personal steno theory.
long_description = file:README.md
long_description_content_type = text/markdown
author = Dessertion
license = MIT
url = https://github.com/Dessertion/plover_ahowo_stenotype
keywords = plover plover_plugin

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
install_requires =
	plover>=4.0.0.dev10
py_modules =
	plover_ahowo_stenotype

[options.entry_points]
plover.system =
	Ahowo Stenotype = plover_ahowo_stenotype
